--- a/.github/workflows/release-beta.yml
+++ b/.github/workflows/release-beta.yml
@@ -29,7 +29,9 @@ jobs:
           git commit -m "chore: bump ${{ steps.semver.outputs.version }}"
           git tag "v${{ steps.semver.outputs.version }}"
 
+          git fetch
           git checkout beta
+          git pull
           git merge main
 
           git push --tags
