--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -28,10 +28,13 @@ jobs:
           git commit -m "chore: bump ${{ steps.semver.outputs.version }}"
           git tag "v${{ steps.semver.outputs.version }}"
 
+          git fetch
           git checkout beta
+          git pull
           git merge main
 
           git checkout stable
+          git pull
           git merge main
 
           git push --tags
