--- a/.github/workflows/release-beta.yml
+++ b/.github/workflows/release-beta.yml
@@ -23,15 +23,13 @@ jobs:
           identifier: "beta"
           version-file: "Cargo.toml"
           version-regex: '^version = "(.*)"'
-      - run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-
-          git add -A
-          git commit -m "chore: bump ${{ steps.semver.outputs.version }}"
-          git tag "v${{ steps.semver.outputs.version }}"
-
-          git checkout beta
-          git merge main
-
-          git push --tags
+      - uses: EndBug/add-and-commit@v9
+        with:
+          default_author: github_actions
+          message: "chore: bump ${{ steps.semver.outputs.version }}"
+          tag: v${{ steps.semver.outputs.version }}
+      - uses: devmasx/merge-branch@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          target_branch: beta
+          type: now
