--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -22,6 +22,9 @@ jobs:
           increment: "patch"
           version-file: "Cargo.toml"
           version-regex: '^version = "(.*)"'
+      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: DeterminateSystems/magic-nix-cache-action@main
+      - run: nix develop -c cargo metadata # Force Cargo.lock to update
       - uses: EndBug/add-and-commit@v9
         with:
           default_author: github_actions
@@ -31,9 +34,11 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           target_branch: beta
+          message: "chore: merge ${{ steps.semver.outputs.version }}"
           type: now
       - uses: devmasx/merge-branch@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           target_branch: stable
+          message: "chore: merge ${{ steps.semver.outputs.version }}"
           type: now
