use workflow_call for release build

--- a/.github/workflows/release-beta.yml
+++ b/.github/workflows/release-beta.yml
@@ -37,3 +37,4 @@ jobs:
           target_branch: beta
           message: "chore: merge ${{ steps.semver.outputs.version }}"
           type: now
+      - uses: ./.github/workflows/build.yml
