--- a/.github/workflows/release-beta.yml
+++ b/.github/workflows/release-beta.yml
@@ -38,3 +38,4 @@ jobs:
           message: "chore: merge ${{ steps.semver.outputs.version }}"
           type: now
       - uses: ./.github/workflows/build.yml
+      - uses: ./.github/workflows/deploy-beta.yml
