--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -43,3 +43,4 @@ jobs:
           message: "chore: merge ${{ steps.semver.outputs.version }}"
           type: now
       - uses: ./.github/workflows/build.yml
+      - uses: ./.github/workflows/deploy-stable.yml
