--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -1,14 +1,13 @@
-name: Deploy (stable)
+name: Deploy (main)
 
 on:
   push:
     branches:
-      - stable
-  workflow_call:
+      - main
   workflow_dispatch:
 
 concurrency:
-  group: "deploy-stable"
+  group: "deploy-main"
   cancel-in-progress: false
 
 jobs:
@@ -19,11 +18,11 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: Swatinem/rust-cache@v2
-      - run: nix build .#web
-      - run: cp -rL result www
+      - run: nix develop -c trunk build
+      - run: mv crates/unavi-app/dist www
       - uses: s0/git-publish-subdir-action@develop
         env:
-          BRANCH: web-app/stable
+          BRANCH: web-app/main
           COMMIT_EMAIL: "41898282+github-actions[bot]@users.noreply.github.com"
           COMMIT_NAME: "github-actions[bot]"
           FOLDER: www
