--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -44,7 +44,11 @@ jobs:
           type: now
 
   build:
+    needs:
+      - release
     uses: ./.github/workflows/build.yml
 
   deploy:
+    needs:
+      - build
     uses: ./.github/workflows/deploy-beta.yml
