--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
         if: env.IS_MAIN
 
       - run: nix develop -c trunk build
-        if: !env.IS_MAIN
+        if: env.IS_MAIN == false
 
       - run: cp -rL result www
       - uses: s0/git-publish-subdir-action@develop
