--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -50,7 +50,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           source_ref: ${{ steps.commit.outputs.commit_long_sha }}
-          target_branch: ${{ env.channel }}
+          target_branch: $CHANNEL
 
   release:
     needs:
@@ -62,4 +62,4 @@ jobs:
       - release
     uses: ./.github/workflows/deploy.yml
     with:
-      channel: ${{ env.CHANNEL }}
+      channel: $CHANNEL
