--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -40,16 +40,15 @@ jobs:
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - run: nix develop -c cargo metadata # Force Cargo.lock to update
 
-      - id: commit
-        uses: EndBug/add-and-commit@v9
+      - uses: EndBug/add-and-commit@v9
         with:
           default_author: github_actions
           message: "chore: bump ${{ steps.semver.outputs.version }}"
           tag: v${{ steps.semver.outputs.version }}
+
       - uses: everlytic/branch-merge@1.1.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          source_ref: ${{ steps.commit.outputs.commit_long_sha }}
           target_branch: ${{ env.channel }}
 
   release:
