--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,4 +42,4 @@ jobs:
           asset_name: ${{ matrix.attr }}-${{ steps.get-tag.outputs.tag }}.zip
           file: ${{ matrix.attr }}.zip
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ github.ref }}
+          tag: ${{ steps.get-tag.outputs.tag }}
