--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -56,6 +56,8 @@ jobs:
     needs:
       - version
     uses: ./.github/workflows/release.yml
+    with:
+      tag: v${{ needs.version.outputs.version }}
 
   deploy:
     needs:
