--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,36 +11,36 @@ on:
         required: true
   workflow_dispatch:
 
+env:
+  CHANNEL: ${{ inputs.channel || github.ref_name }}
+
 concurrency:
-  group: "deploy-${{ inputs.channel }}"
+  group: "deploy-${{ env.CHANNEL }}"
   cancel-in-progress: false
 
 jobs:
   deploy-web:
-    name: deploy-web-${{ inputs.channel }}
     runs-on: ubuntu-latest
-    env:
-      IS_MAIN: ${{ inputs.channel == 'main' || github.ref_name == 'main' }}
     steps:
       - uses: actions/checkout@v4
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: Swatinem/rust-cache@v2
 
-      - if: env.IS_MAIN == true
+      - if: env.CHANNEL == 'main'
         run: nix develop -c trunk build
 
-      - if: env.IS_MAIN == false
+      - if: env.CHANNEL != 'main'
         run: nix build .#web
 
       - run: cp -rL result www
       - uses: s0/git-publish-subdir-action@develop
         env:
-          BRANCH: "web-app/${{ inputs.channel }}"
+          BRANCH: "web-app/${{ env.CHANNEL }}"
           COMMIT_EMAIL: "41898282+github-actions[bot]@users.noreply.github.com"
           COMMIT_NAME: "github-actions[bot]"
           FOLDER: www
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
           REPO: self
           SQUASH_HISTORY: true
           TARGET_DIR: www
