--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ env:
   CHANNEL: ${{ inputs.channel || github.ref_name }}
 
 concurrency:
-  group: "deploy-${{ env.CHANNEL }}"
+  group: "deploy-${{ inputs.channel || github.ref_name }}"
   cancel-in-progress: false
 
 jobs:
