fix channel input

--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -64,4 +64,4 @@ jobs:
       - release
     uses: ./.github/workflows/deploy.yml
     with:
-      channel: $CHANNEL
+      channel: ${{ env.CHANNEL }}
