--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,6 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: Swatinem/rust-cache@v2
-      # Not working in CI... but works on my machine.
-      # - run: nix flake check .?submodules=1 --all-systems
       - run: nix develop -c cargo doc --workspace --all-features --no-deps
-      - run: nix develop -c cargo test --workspace --all-features
+      - run: nix develop -c cargo test --workspace --all-features --all-targets
+      - run: nix develop -c cargo test --workspace --all-features --doc
