--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,11 @@ type_complexity = "allow"
 [workspace.dependencies]
 axum = "0.6.20"
 bevy = "0.12.1"
+bitflags = "2.4.2"
 tokio = { version = "1.34.0", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+wit-bindgen-rt = "0.20.0"
 wtransport = "0.1.8"
 
 [profile.dev]
