--- a/components/unavi-ui/Cargo.toml
+++ b/components/unavi-ui/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "unavi-system"
+name = "unavi-ui"
 version.workspace = true
 edition.workspace = true
 repository.workspace = true
@@ -16,7 +16,6 @@ bitflags.workspace = true
 wit-bindgen-rt.workspace = true
 
 [package.metadata.component]
-package = "unavi:system"
+package = "component:unavi-ui"
 
 [package.metadata.component.dependencies]
-"unavi:ui" = { path = "../../target/wasm32-wasi/release/unavi_ui.wasm" }
