--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,11 +29,10 @@ jobs:
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: Swatinem/rust-cache@v2
 
-      - run: nix develop -c cargo component build --release -p unavi-ui
-      - run: nix develop -c cargo component check -p unavi-ui -p unavi-system
+      - run: nix develop -c nix run .#check-components
       - uses: EndBug/add-and-commit@v9
         with:
-          message: "chore: generate wasm bindings"
+          message: "chore: generate component bindings"
           default_author: github_actions
 
       - run: nix develop -c cargo clippy --fix --no-deps
