--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,15 +27,20 @@ jobs:
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: Swatinem/rust-cache@v2
 
-      - run: nix build .#web && cp -rL result www
+      - run: nix build .#web
 
-      - uses: s0/git-publish-subdir-action@develop
-        env:
-          BRANCH: "web-app/${{ env.CHANNEL }}"
-          COMMIT_EMAIL: "41898282+github-actions[bot]@users.noreply.github.com"
-          COMMIT_NAME: "github-actions[bot]"
-          FOLDER: www
-          GITHUB_TOKEN: ${{ github.token }}
-          REPO: self
-          SQUASH_HISTORY: true
-          TARGET_DIR: www
+      - run: |
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+
+          # Remove all files besides our build output
+          git rm -r .
+          cp -rL result .
+
+          git add .
+          git commit -m "chore: deploy web-app/${{ env.CHANNEL }}"
+
+          # Squash commits
+          git rebase -i HEAD~2
+
+          git push origin HEAD:web-app/${{ env.CHANNEL }}
