--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,7 @@ jobs:
         run: |
           find . -mindepth 1 -maxdepth 1 -not -name '.git' -not -name 'result' -exec rm -rf {} \;
           cp -rL result/* .
+          rm -rf result
 
       - name: Commit changes
         run: |
