--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,29 +30,28 @@ jobs:
     name: ${{ matrix.attr }}
     runs-on: ${{ matrix.os }}
     env:
-      IS_WINDOWS: ${{ matrix.os == 'windows-latest' }}
+      IS_WINDOWS: ${{ matrix.os == "windows-latest" }}
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: "true"
           fetch-depth: 0
-      - uses: DeterminateSystems/nix-installer-action@main
-      - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: Swatinem/rust-cache@v2
 
-      - if: env.IS_WINDOWS == false
+      - if: ${{ ! env.IS_WINDOWS }}
+        uses: DeterminateSystems/nix-installer-action@main
+      - if: ${{ ! env.IS_WINDOWS }}
+        uses: DeterminateSystems/magic-nix-cache-action@main
+      - if: ${{ ! env.IS_WINDOWS }}
         run: nix build .?submodules=1#packages.${{ matrix.attr }}
 
-      - if: env.IS_WINDOWS
+      - if: ${{ env.IS_WINDOWS }}
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: x86_64-pc-windows-msvc
-
-      - if: env.IS_WINDOWS
-        run: cargo build -p ${{ matrix.attr }} --release --target x86_64-pc-windows-msvc
-
-      - if: env.IS_WINDOWS
+      - if: ${{ env.IS_WINDOWS }}
         run: |
+          cargo build -p ${{ matrix.attr }} --release --target x86_64-pc-windows-msvc
           mkdir -p result/bin
           mv target/x86_64-pc-windows-msvc/release result/bin
           cp -r assets result/bin
