--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,8 +29,6 @@ jobs:
       matrix: ${{ fromJSON(needs.nix-matrix.outputs.matrix) }}
     name: ${{ matrix.attr }}
     runs-on: ${{ matrix.os }}
-    env:
-      IS_WINDOWS: ${{ matrix.os == 'windows-latest' }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -38,20 +36,20 @@ jobs:
           fetch-depth: 0
       - uses: Swatinem/rust-cache@v2
 
-      - if: ${{ ! env.IS_WINDOWS }}
+      - if: ${{ ! matrix.os == 'windows-latest' }}
         uses: DeterminateSystems/nix-installer-action@main
-      - if: ${{ ! env.IS_WINDOWS }}
+      - if: ${{ ! matrix.os == 'windows-latest' }}
         uses: DeterminateSystems/magic-nix-cache-action@main
-      - if: ${{ ! env.IS_WINDOWS }}
+      - if: ${{ ! matrix.os == 'windows-latest' }}
         run: nix build .?submodules=1#packages.${{ matrix.attr }}
 
-      - if: ${{ env.IS_WINDOWS }}
+      - if: ${{ matrix.os == 'windows-latest' }}
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: x86_64-pc-windows-msvc
-      - if: ${{ env.IS_WINDOWS }}
+      - if: ${{ matrix.os == 'windows-latest' }}
         run: |
-          cargo build -p ${{ matrix.attr }} --release --target x86_64-pc-windows-msvc
+          cargo build -p ${{ matrix.package }} --release --target x86_64-pc-windows-msvc
           mkdir -p result/bin
           mv target/x86_64-pc-windows-msvc/release result/bin
           cp -r assets result/bin
