--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,26 +41,26 @@ jobs:
       - name: Log IS_WINDOWS
         run: echo "IS_WINDOWS=$IS_WINDOWS"
 
-      - if: ! env.IS_WINDOWS
+      - if: ${{ ! env.IS_WINDOWS }}
         uses: DeterminateSystems/nix-installer-action@main
-      - if: ! env.IS_WINDOWS
+      - if: ${{ ! env.IS_WINDOWS }}
         uses: DeterminateSystems/magic-nix-cache-action@main
-      - if: ! env.IS_WINDOWS
+      - if: ${{ ! env.IS_WINDOWS }}
         run: nix build .?submodules=1#packages.${{ matrix.attr }}
-      - if: ! env.IS_WINDOWS
+      - if: ${{ ! env.IS_WINDOWS }}
         run: zip -r ${{ matrix.attr }}.zip result/bin
 
-      - if: env.IS_WINDOWS
+      - if: ${{ env.IS_WINDOWS }}
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: x86_64-pc-windows-msvc
-      - if: env.IS_WINDOWS
+      - if: ${{ env.IS_WINDOWS }}
         run: |
           cargo build -p ${{ matrix.package }} --release --target x86_64-pc-windows-msvc
           mkdir -p result/bin
           mv target/x86_64-pc-windows-msvc/release result/bin
           cp -r assets result/bin
-      - if: env.IS_WINDOWS
+      - if: ${{ env.IS_WINDOWS }}
         run: Compress-Archive -Path result/bin -DestinationPath ${{ matrix.attr }}.zip
 
       - uses: svenstaro/upload-release-action@v2
